testsuite/tests/explicit-dicts/should_fail/Roles9.stderr

Roles9.hs:26:6: error:
    • Explicit dictionary application to: ‘Ord a’
      is not allowed because of instance incoherence:
      In the context ‘Equal a b’
        Type variable ‘a’ has role Nominal
    • In the expression: evilInsert ((reverseOrd @Int :: Ord a))
      In an equation for ‘f9’:
          f9 = evilInsert ((reverseOrd @Int :: Ord a))
